force-app/main/default/objects/DS_us_bank_statement__c/DS_us_bank_statement__c.object-meta.xml
<CustomObject>
    <label>DS us bank statement</label>
    <nameField>
        <displayFormat>DS BANK ST - {0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DS us bank statements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>