force-app/main/default/objects/DS_us_bank_statement__c/fields/bi_account_number__c.field-meta.xml
<CustomField>
    <fullName>bi_account_number__c</fullName>
    <label>BI Account Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>