force-app/main/default/objects/DS_us_bank_statement__c/fields/bi_bank_name__c.field-meta.xml
<CustomField>
    <fullName>bi_bank_name__c</fullName>
    <label>BI Bank Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>