force-app/main/default/objects/DS_us_bank_statement__c/fields/bi_closing_balance__c.field-meta.xml
<CustomField>
    <fullName>bi_closing_balance__c</fullName>
    <label>BI Closing Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>