force-app/main/default/objects/DS_us_bank_statement__c/fields/bi_document_type__c.field-meta.xml
<CustomField>
    <fullName>bi_document_type__c</fullName>
    <label>BI Document Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>