force-app/main/default/objects/DS_us_bank_statement__c/fields/bi_end_date__c.field-meta.xml
<CustomField>
    <fullName>bi_end_date__c</fullName>
    <label>BI End Date</label>
    <type>Date</type>
</CustomField>