force-app/main/default/objects/DS_us_bank_statement__c/fields/bi_tally_check__c.field-meta.xml
<CustomField>
    <fullName>bi_tally_check__c</fullName>
    <label>BI Tally Check</label>
    <length>100</length>
    <type>Text</type>
</CustomField>