force-app/main/default/objects/DS_us_bank_statement__c/fields/bi_transaction_categ__c.field-meta.xml
<CustomField>
    <fullName>bi_transaction_categ__c</fullName>
    <label>BI Transaction Categ</label>
    <length>100</length>
    <type>Text</type>
</CustomField>