force-app/main/default/objects/DS_us_bank_statement__c/fields/doc_id__c.field-meta.xml
<CustomField>
    <fullName>doc_id__c</fullName>
    <label>Doc Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>