force-app/main/default/objects/DS_us_bank_statement__c/fields/e_error_message__c.field-meta.xml
<CustomField>
    <fullName>e_error_message__c</fullName>
    <label>E Error Message</label>
    <length>100</length>
    <type>Text</type>
</CustomField>