force-app/main/default/objects/DS_us_bank_statement__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>DS us bank statements</relationshipLabel>
    <relationshipName>DS_us_bank_statements</relationshipName>
    <type>Lookup</type>
</CustomField>