force-app/main/default/objects/DS_us_bank_statement__c/fields/Origianl_File_Title__c.field-meta.xml
<CustomField>
    <fullName>Origianl_File_Title__c</fullName>
    <label>Origianl File Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>