force-app/main/default/objects/DS_us_bank_statement__c/fields/Original_File_Link__c.field-meta.xml
<CustomField>
    <fullName>Original_File_Link__c</fullName>
    <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) +  Original_File_URL__c ,  Origianl_File_Title__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original File Link</label>
    <type>Text</type>
</CustomField>