force-app/main/default/objects/DS_us_bank_statement__c/fields/Original_File_URL__c.field-meta.xml
<CustomField>
    <fullName>Original_File_URL__c</fullName>
    <label>Original File URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>