force-app/main/default/objects/DS_us_bank_statement__c/fields/Review_URL_holder__c.field-meta.xml
<CustomField>
    <fullName>Review_URL_holder__c</fullName>
    <label>Review URL holder</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>